add get object address example